# REU-Summer-2025

./: .gitignore  LICENSE  README.md  logger.txt  run_nav output2.txt  run_nav output3.txt  run_nav output4.txt
src/cam_calib/: calibration_code.py
src/fpn_msgs/: CMakeLists.txt  package.xml
src/fpn_msgs/msg/: FourWD.msg  GPSPosition.msg  Goal.msg  GoalMultiArray.msg  HybridPerception.msg  LidarAnalysis.msg  LidarGapData.msg  MHEOutput.msg  MPCInput.msg  MPCOutput.msg  PID.msg  PerceptionLidar.msg  PerceptionLidarController.msg  PerceptionLidarControllerDebug.msg  PerceptionLidarLine.msg  PerceptionLidarRow.msg  TSPath.msg  TSWaypoint.msg  Terrabot.msg
src/fpn_msgs/srv/: BoolSrv.srv  GoStraight.srv  Maneuver.srv  Report.srv  RosbagDetails.srv  TurnDegrees.srv  ZZsetString.srv
src/mobile_valens_interfaces/: CMakeLists.txt  package.xml
src/mobile_valens_interfaces/msg/: AccumulatorPressure.msg  ArmEncoder.msg  ArmState.msg  Extrusion.msg  GripperPressure.msg  GripperReply.msg  IrReply.msg  ServoArm.msg  ServoCamera.msg  SoftArm.msg  SoftArmPressure.msg  SoftArmRamp.msg  Theta4Arm.msg
src/neural-network-models/models_in_row/: 220602_AR_bst.mapping  220602_AR_bst.xml
src/pi_comm_pkg/: package.xml  setup.cfg  setup.py
src/pi_comm_pkg/launch/: pi_comm.launch.py
src/pi_comm_pkg/pi_comm_pkg/: pan_tilt_pub.py  pan_tilt_tester.py  pi_comm_pkg_exec.py  realsense_image_save.py
src/pi_comm_pkg/pi_comm_pkg/submodules/ADS1115/: ADS1115.py  example.py
src/pi_comm_pkg/pi_comm_pkg/submodules/MCP3008/: MCP3008.py  MCP3008_debug.py
src/pi_comm_pkg/pi_comm_pkg/submodules/MCP4725/: MCP4725.py  MCP4725_debug.py
src/pi_comm_pkg/pi_comm_pkg/submodules/PCA9685/: PCA9685.py  PCA9685_debug.py  example.py
src/pi_comm_pkg/pi_comm_pkg/submodules/StepperMotor/: StepperMotor.py  StepperMotor_debug.py
src/pi_comm_pkg/pi_comm_pkg/submodules/TCA9548A/: TCA9548A.py  TCA9548A_debug.py
src/state_machine_pkg/: CMakeLists.txt  package.xml
src/state_machine_pkg/src/: state_machine.py
src/terra_mpc/: CMakeLists.txt  package.xml
src/terra_mpc/config/: configs.yaml
src/terra_mpc/src/: mpc_ackermann.py  mpc_ackermann_oldd.py  mpc_node_old.py
src/usb_cam/config/: camera_info_front.yaml  camera_info_front1.yaml  camera_info_kiyo.yaml  camera_info_realsense.yaml  params_1.yaml  params_2.yaml  params_3.yaml
src/usb_cam/launch/: camera.launch.py  camera_config.py  camera_kiyo.launch.py
src/vision-nav-manager/: CMakeLists.txt  package.xml
src/vision-nav-manager/config/: configs.yaml
src/vision-nav-manager/launch/: rosbag_manager.launch.xml  run_navigation.launch.py
src/vision_perception/: CMakeLists.txt  package.xml
src/vision_perception/src/: keypoint_inference.py  keypoint_inference_cuda.py  keypoint_inference_unrect.py
src/waypoint_generator/: CMakeLists.txt  package.xml
src/waypoint_generator/src/: dummy.py  reference_path_publisher.py
src/xarm_control/: package.xml  readme.txt  setup.cfg  setup.py
src/xarm_control/launch/: xarm_control.launch.py  xarm_setup.launch.py
src/xarm_control/xarm_control/: kiyo_image_save.py  run_xarm.py  run_xarm_moveit.py  run_xarm_moveit_org.py  run_xarm_moveitold2.py
src/xarm_ros2/xarm_description/launch/: _robot_description.launch.py
src/xarm_ros2/xarm_moveit_config/launch/: _dual_robot_moveit_common2.launch.py  _dual_robot_moveit_gazebo.launch.py  _robot_moveit_common2.launch.py  _robot_moveit_gazebo.launch.py  _robot_moveit_ignition.launch.py  _robot_moveit_realmove.launch.py
src/xarm_ros2/xarm_planner/launch/: _robot_planner.launch.py  lite6_planner_realmove.launch.py
